@@ -140,6 +140,7 @@ void bindMurmurHash()
 		.def( self == self )
 		.def( self != self )
 		.def( self < self )
+		.def( "copyFrom", &MurmurHash::operator=, return_self<>() )
 		.def( "__repr__", &repr )
 		.def( "__str__", &MurmurHash::toString )
 		.def( "toString", &MurmurHash::toString )
